Add more articles to the bibliography

--- a/bibliografia.bib
+++ b/bibliografia.bib
@@ -31,3 +31,96 @@
   DATE_ADDED =	 {Tue Oct 11 21:12:06 2016},
 }
 
+
+
+@article{sanchez-2016-status-market,
+  author =	 {Miguel A. S{\'a}nchez and Gabriel Le{\'o}n},
+  title =	 {Status of Market, Regulation and Research of
+                  Genetically Modified Crops in Chile},
+  journal =	 {New Biotechnology},
+  volume =	 33,
+  number =	 6,
+  pages =	 {815-823},
+  year =	 2016,
+  doi =		 {10.1016/j.nbt.2016.07.017},
+  url =		 {http://dx.doi.org/10.1016/j.nbt.2016.07.017},
+  DATE_ADDED =	 {Thu Nov 10 19:57:46 2016},
+}
+
+
+
+@article{devi-2006-global-infor,
+  author =	 {K.R. Lakshmy Devi and P.P. Pillai},
+  title =	 {Globalisation, Information Technology Revolution and
+                  North-South Migration: a Study With Reference To
+                  Asian Indian Software Professionals in the Usa},
+  journal =	 {World Review of Science, Technology and Sustainable
+                  Development},
+  volume =	 3,
+  number =	 3,
+  pages =	 247,
+  year =	 2006,
+  doi =		 {10.1504/wrstsd.2006.010225},
+  url =		 {http://dx.doi.org/10.1504/wrstsd.2006.010225},
+  DATE_ADDED =	 {Thu Nov 10 20:04:44 2016},
+}
+
+@article{hanson-2004-risk-risk,
+  author =	 {James Hanson and Robert Dismukes and William
+                  Chambers and Catherine Greene and Amy Kremen},
+  title =	 {Risk and Risk Management in Organic Agriculture:
+                  Views of Organic Farmers},
+  journal =	 {Renewable Agriculture and Food Systems},
+  volume =	 19,
+  number =	 04,
+  pages =	 {218-227},
+  year =	 2004,
+  doi =		 {10.1079/rafs200482},
+  url =		 {http://dx.doi.org/10.1079/RAFS200482},
+  DATE_ADDED =	 {Thu Nov 10 20:51:59 2016},
+}
+
+@article{aerni-2006-stakeh-attit,
+  author =	 {Philipp Aerni and Thomas Bernauer},
+  title =	 {Stakeholder Attitudes Toward Gmos in the
+                  Philippines, Mexico, and South Africa: The Issue of
+                  Public Trust},
+  journal =	 {World Development},
+  volume =	 34,
+  number =	 3,
+  pages =	 {557-575},
+  year =	 2006,
+  doi =		 {10.1016/j.worlddev.2005.08.007},
+  url =		 {http://dx.doi.org/10.1016/j.worlddev.2005.08.007},
+  DATE_ADDED =	 {Thu Nov 10 20:58:47 2016},
+}
+
+@article{glenna-2007-organ-conven,
+  author =	 {Leland L. Glenna and Raymond A. Jussaume},
+  title =	 {Organic and Conventional Washington State Farmers'
+                  Opinions on Gm Crops and Marketing Strategies},
+  journal =	 {Renewable Agriculture and Food Systems},
+  volume =	 22,
+  number =	 02,
+  pages =	 {118-124},
+  year =	 2007,
+  doi =		 {10.1017/s1742170507001603},
+  url =		 {http://dx.doi.org/10.1017/S1742170507001603},
+  DATE_ADDED =	 {Thu Nov 10 21:04:21 2016},
+}
+
+@article{jank-2006-co-exist,
+  author =	 {Bernhard Jank and Johannes Rath and Helmut
+                  Gaugitsch},
+  title =	 {Co-Existence of Agricultural Production Systems},
+  journal =	 {Trends in Biotechnology},
+  volume =	 24,
+  number =	 5,
+  pages =	 {198-200},
+  year =	 2006,
+  doi =		 {10.1016/j.tibtech.2006.03.001},
+  url =		 {http://dx.doi.org/10.1016/j.tibtech.2006.03.001},
+  DATE_ADDED =	 {Thu Nov 10 21:05:29 2016},
+}
+
+
