--- a/resumen.tex
+++ b/resumen.tex
@@ -1,4 +1,4 @@
-% Created 2016-11-10 jue 15:19
+% Created 2016-11-10 jue 18:12
 \documentclass[11pt]{article}
 \usepackage[utf8]{inputenc}
 \usepackage{lmodern}
@@ -65,6 +65,29 @@ El debate debe centrarse en como regular esta tecnología para que no tenga impa
 Los principales alimentos utilizados actualmente ya han sido considerados seguros para su consumo (principalmente maíz, soja y colza) y los métodos para este resultado han sido aprobados por el Consejo Internacional de la Ciencia (ICSU) y en común acuerdo con la Organización Mundial de la Salud (OMS) junto con la Organización de las Naciones Unidas para la Agricultura y la Alimentación (FAO).
 
 Los OGM han pasado todos las pruebas sobre la salud humana y es improbable que presenten efectos negativos inesperados. Y en los países que en los que ya hace década y media ya han sido introducidos no han presentado efectos sobre la salud humana, incluyendo los riesgos potenciales.
+
+El flujo transgénico no es algo peculiar de las variedades transgénicas, sino que es algo común.
+
+\section{Resisting and accepting: Farmers's hybrid epistemologies in the GMO controversy in Chile \cite{tironi-2013-resis-accep}.}
+\label{sec:orgheadline5}
+
+\subsection{Introduction: what do we talk about when we talk about farmers in Latin America?}
+\label{sec:orgheadline2}
+
+Según el movimiento Sem Terra las corporaciones solo buscan beneficio económico y crear una oligarquía controlando la producción de semillas, y así los pequeños agricultores solo podrán acudir a ellos por estos productos. Con esto el MST brasileño muestra que para ellos la resistencia a los GMOs es una acto de resistencia social.
+
+Pero a diferencia del caso brasileño, en Chile no se resiste a las ideas del capitalismo o la tecnología, sino que el movimiento en contra de los GMOs las promueve.
+
+\subsection{The GMO controversy, civic epistemologies and the purified farmer}
+\label{sec:orgheadline4}
+
+Luego de veinte años de la introducción del primer alimento genéticamente modificado, el debate se ha polarizado más aún. Además los diferentes actores en éste debate tienen posturas muy complejas y variadas.
+
+\subsubsection{Towards a controversy-based definition of civic epistemologies}
+\label{sec:orgheadline3}
+
+
+
 
 
 
